--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,8 +2,20 @@ apiVersion: v1
 entries:
   crds:
   - apiVersion: v2
+    appVersion: 2.2.1-rc.2
+    created: "2024-10-26T21:09:09.120885521Z"
+    description: 'Deploys the custom resource definitions used by the minio-operator-ext
+      operator '
+    digest: 7d3f034f881c7775c575aa2b72224c581bf75ae50a5d72971b28ae82c8a4d280
+    home: https://github.com/benfiola/minio-operator-ext
+    name: crds
+    type: application
+    urls:
+    - https://benfiola.github.io/minio-operator-ext/charts/crds-2.2.1-rc.2.tgz
+    version: 2.2.1-rc.2
+  - apiVersion: v2
     appVersion: 2.2.0
-    created: "2024-10-26T07:07:38.851467579Z"
+    created: "2024-10-26T21:09:09.120708461Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: 43bcfa2057db5d063dd6c1a22ce5e6d397dc31c03c8402a51cb436a4ad753b15
@@ -15,7 +27,7 @@ entries:
     version: 2.2.0
   - apiVersion: v2
     appVersion: 2.2.0-rc.8
-    created: "2024-10-26T07:07:38.851309092Z"
+    created: "2024-10-26T21:09:09.120532914Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: 134f21968e037a46f4d055da120b6ce2a661acfcaa62e4aa92d0c0f919d0a40c
@@ -27,7 +39,7 @@ entries:
     version: 2.2.0-rc.8
   - apiVersion: v2
     appVersion: 2.2.0-rc.7
-    created: "2024-10-26T07:07:38.851152247Z"
+    created: "2024-10-26T21:09:09.120317051Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: eb1457d65dff36fe610bbbc8ccf00ba8c8ad4b49eff49edc8e3e4c71c8d50ecf
@@ -39,7 +51,7 @@ entries:
     version: 2.2.0-rc.7
   - apiVersion: v2
     appVersion: 2.2.0-rc.6
-    created: "2024-10-26T07:07:38.850980283Z"
+    created: "2024-10-26T21:09:09.120142125Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: b6bb75faca94e92144f80ebb456fcb050ad07e13eb6c4e0477b4e079d6612265
@@ -51,7 +63,7 @@ entries:
     version: 2.2.0-rc.6
   - apiVersion: v2
     appVersion: 2.2.0-rc.1
-    created: "2024-10-26T07:07:38.850810475Z"
+    created: "2024-10-26T21:09:09.119945739Z"
     description: Deploy custom resource definitions for Minio Operator Ext
     digest: ca47f612708ef5e91b34f0f9c93a00f7b3e5d3ea91c83421f5f091d39111d563
     name: crds
@@ -61,7 +73,7 @@ entries:
     version: 2.2.0-rc.1
   - apiVersion: v2
     appVersion: 2.2.0-alpha.13+post-helm
-    created: "2024-10-26T07:07:38.850463051Z"
+    created: "2024-10-26T21:09:09.119563517Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: 94d910d99b896a10adadbb5cd6d8d122d0f1ac30fbda184ab521bb6476e2cbc6
@@ -73,7 +85,7 @@ entries:
     version: 2.2.0-alpha.13+post-helm
   - apiVersion: v2
     appVersion: 2.1.1-rc.4
-    created: "2024-10-26T07:07:38.850279306Z"
+    created: "2024-10-26T21:09:09.119340141Z"
     description: A Helm chart for Kubernetes
     digest: ef8ff619e988b1930bcd66fe34815ab7b81ab3e514ee4f30210062a451283f1c
     name: crds
@@ -83,7 +95,7 @@ entries:
     version: 2.1.1-rc.4
   - apiVersion: v2
     appVersion: 2.1.1-rc.3
-    created: "2024-10-26T07:07:38.849881679Z"
+    created: "2024-10-26T21:09:09.118925027Z"
     description: A Helm chart for Kubernetes
     digest: aec9e4645f691e2d14ea0a34d2b658a3953c9ccb0bbfdbf692415fb6c9b9fb85
     name: crds
@@ -93,7 +105,7 @@ entries:
     version: 2.1.1-rc.3
   - apiVersion: v2
     appVersion: 2.1.1-rc.2
-    created: "2024-10-26T07:07:38.849461319Z"
+    created: "2024-10-26T21:09:09.118508961Z"
     description: A Helm chart for Kubernetes
     digest: 9c395cc95ea23ab509026db7b1481b5df276628af59ac3ddf033552e3414cd58
     name: crds
@@ -103,8 +115,20 @@ entries:
     version: 2.1.1-rc.2
   operator:
   - apiVersion: v2
+    appVersion: 2.2.1-rc.2
+    created: "2024-10-26T21:09:09.125227258Z"
+    description: 'Deploy minio-operator-ext, an operator that allows for declarative
+      management of MinIO resources '
+    digest: fcb65f8836281f5319ddacd3abec483aa5504dc0df1afb93dd942484689b0e4c
+    home: https://github.com/benfiola/minio-operator-ext
+    name: operator
+    type: application
+    urls:
+    - https://benfiola.github.io/minio-operator-ext/charts/operator-2.2.1-rc.2.tgz
+    version: 2.2.1-rc.2
+  - apiVersion: v2
     appVersion: 2.2.0
-    created: "2024-10-26T07:07:38.855196886Z"
+    created: "2024-10-26T21:09:09.124844494Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: cffec12313cd99eea4b7f3817c877ee512a553ff3542ef397d1d9c14de702286
@@ -116,7 +140,7 @@ entries:
     version: 2.2.0
   - apiVersion: v2
     appVersion: 2.2.0-rc.8
-    created: "2024-10-26T07:07:38.854889758Z"
+    created: "2024-10-26T21:09:09.124421015Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: 1b40c34bfee174d6c8c77412b68d298eecb5bd0d1d2721a3f4a565e200882af7
@@ -128,7 +152,7 @@ entries:
     version: 2.2.0-rc.8
   - apiVersion: v2
     appVersion: 2.2.0-rc.7
-    created: "2024-10-26T07:07:38.854585497Z"
+    created: "2024-10-26T21:09:09.124078977Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: cd21998524e47a63d95a5a1b52e863d91d6b4853d44fee3c3aec57e7d123d910
@@ -140,7 +164,7 @@ entries:
     version: 2.2.0-rc.7
   - apiVersion: v2
     appVersion: 2.2.0-rc.6
-    created: "2024-10-26T07:07:38.854263101Z"
+    created: "2024-10-26T21:09:09.12376367Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: 59a0562d8d6929f3ee0c8ee00fd6c7bed537f98746f5ed172d657756f0453c98
@@ -152,7 +176,7 @@ entries:
     version: 2.2.0-rc.6
   - apiVersion: v2
     appVersion: 2.2.0-rc.1
-    created: "2024-10-26T07:07:38.853914536Z"
+    created: "2024-10-26T21:09:09.123448683Z"
     description: Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources
     digest: 759a21ff80891af26ee527b27f31d783ddaa333ba5f8fb4f0a816cf66285697f
@@ -163,7 +187,7 @@ entries:
     version: 2.2.0-rc.1
   - apiVersion: v2
     appVersion: 2.2.0-alpha.13+post-helm
-    created: "2024-10-26T07:07:38.853537517Z"
+    created: "2024-10-26T21:09:09.123104891Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: 94a8ed5fd216a22e2e8639024b0fa75df2ea67cf71cd1d36ceab4476a463456c
@@ -175,7 +199,7 @@ entries:
     version: 2.2.0-alpha.13+post-helm
   - apiVersion: v2
     appVersion: 2.1.1-rc.4
-    created: "2024-10-26T07:07:38.852705105Z"
+    created: "2024-10-26T21:09:09.122320706Z"
     description: A Helm chart for Kubernetes
     digest: 1fbf487c84740145b9af2f8e4bce3604f5d5d65003c47d39d1804f4875fc3dd0
     name: operator
@@ -185,7 +209,7 @@ entries:
     version: 2.1.1-rc.4
   - apiVersion: v2
     appVersion: 2.1.1-rc.3
-    created: "2024-10-26T07:07:38.852168687Z"
+    created: "2024-10-26T21:09:09.121616574Z"
     description: A Helm chart for Kubernetes
     digest: cd1ff8aeaaa3e9ed0cd260efc1275870bdaec0da8e5b937c304f424883ea73c0
     name: operator
@@ -195,7 +219,7 @@ entries:
     version: 2.1.1-rc.3
   - apiVersion: v2
     appVersion: 2.1.1-rc.2
-    created: "2024-10-26T07:07:38.851827165Z"
+    created: "2024-10-26T21:09:09.121262594Z"
     description: A Helm chart for Kubernetes
     digest: 760c023a1b6ef81b0de46c4b94e900df58b25e1abf6846387505c6e680f1c158
     name: operator
@@ -203,4 +227,4 @@ entries:
     urls:
     - https://benfiola.github.io/minio-operator-ext/charts/operator-2.1.1-rc.2.tgz
     version: 2.1.1-rc.2
-generated: "2024-10-26T07:07:38.848651979Z"
+generated: "2024-10-26T21:09:09.117937476Z"
