--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -74,8 +74,8 @@ jobs:
       - name: build image tar
         run: |
           echo "${{needs.facts.outputs.version}}" > internal/operator/version.txt
-          docker buildx create --platform=linux/amd64 --use
-          docker buildx build --platform=linux/amd64 --progress=plain --output type=oci,dest=docker.tar .
+          docker buildx create --platform=linux/arm64,linux/amd64 --use
+          docker buildx build --platform=linux/arm64,linux/amd64 --progress=plain --output type=oci,dest=docker.tar .
       - name: upload artifact
         uses: actions/upload-artifact@v4
         with:
