fix: codegen, helm and data embedding
- Update Makefile 'generate' target to auto-generate rbac
- Uses autogenerated crds in helm charts
- Uses autogenerated rbac in helm charts
- Updates gitignore to ignore generated code
- Updates github workflows to generate code (- and fail if non-ignored codegen produces diff)
- Fix typo in latest docker image publish
- version.txt file is now git-ignored and relocated to an embed directory
- new method: embed.GetOperatorVersion() returns '0.0.0+undefined' if version.txt not foudn

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@
 
 # ignore dev assets
 /.dev
+
+# ignore generated assets
+charts/crds/generated
+charts/operator/generated
+internal/embed/**/*
+!internal/embed/empty.txt
