fix: embedded version
- version.txt file is now git-ignored and relocated to an embed directory
- new method: embed.GetOperatorVersion() returns '0.0.0+undefined' if version.txt not foudn

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -59,7 +59,7 @@ jobs:
             })
       - name: generate code
         run: |
-          echo "${{steps.facts.outputs.version}}" > internal/operator/version.txt
+          echo "${{steps.facts.outputs.version}}" > internal/embed/version.txt
           make generate
           git diff --exit-code
       - name: upload source artifact
