Added charts for version 2.2.3-rc.1

--- a/charts/index.yaml
+++ b/charts/index.yaml
@@ -2,8 +2,20 @@ apiVersion: v1
 entries:
   crds:
   - apiVersion: v2
+    appVersion: 2.2.3-rc.1
+    created: "2024-11-04T01:37:47.237754857Z"
+    description: 'Deploys the custom resource definitions used by the minio-operator-ext
+      operator '
+    digest: 88f97d1b29ba23c50be0e3dbf496e5b42034f992a64109597caca6cdb5b2fe0e
+    home: https://github.com/benfiola/minio-operator-ext
+    name: crds
+    type: application
+    urls:
+    - https://benfiola.github.io/minio-operator-ext/charts/crds-2.2.3-rc.1.tgz
+    version: 2.2.3-rc.1
+  - apiVersion: v2
     appVersion: 2.2.2
-    created: "2024-11-04T01:15:16.132421551Z"
+    created: "2024-11-04T01:37:47.237583649Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: 878a762836ba693ab7f67670ee2cb7e2b09a05f69663fdfe589973c075a544c5
@@ -15,7 +27,7 @@ entries:
     version: 2.2.2
   - apiVersion: v2
     appVersion: 2.2.2-rc.1
-    created: "2024-11-04T01:15:16.132237928Z"
+    created: "2024-11-04T01:37:47.237386632Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: 1ed9db85e5c4cc6f565936503b0b3ff9e13ce1d60c1461d56dfa313f4641128e
@@ -27,7 +39,7 @@ entries:
     version: 2.2.2-rc.1
   - apiVersion: v2
     appVersion: 2.2.2-alpha.3+generate-more-code
-    created: "2024-11-04T01:15:16.132066367Z"
+    created: "2024-11-04T01:37:47.237216886Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: b6165b32af4b75bfb37a01888a6e3bd6de9bff494ea6827a71c125609984fa30
@@ -39,7 +51,7 @@ entries:
     version: 2.2.2-alpha.3+generate-more-code
   - apiVersion: v2
     appVersion: 2.2.2-alpha.2+generate-more-code
-    created: "2024-11-04T01:15:16.13189109Z"
+    created: "2024-11-04T01:37:47.23704699Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: b02d8079f1bf2795be4d739c106062e4c4e5334dd67aefab9a792c0e35078b50
@@ -51,7 +63,7 @@ entries:
     version: 2.2.2-alpha.2+generate-more-code
   - apiVersion: v2
     appVersion: 2.2.1-rc.4
-    created: "2024-11-04T01:15:16.131690665Z"
+    created: "2024-11-04T01:37:47.23684319Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: a111cf0729b7be5ce65b7204bcb621a0f94738187ec1d14d64d29ed0bc07186a
@@ -63,7 +75,7 @@ entries:
     version: 2.2.1-rc.4
   - apiVersion: v2
     appVersion: 2.2.1-rc.3
-    created: "2024-11-04T01:15:16.131524294Z"
+    created: "2024-11-04T01:37:47.236441352Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: 8590ed7efbfe1cb45c7439a0e789eaef7167bf7b745e10c43f455fe61e6d3228
@@ -75,7 +87,7 @@ entries:
     version: 2.2.1-rc.3
   - apiVersion: v2
     appVersion: 2.2.1-rc.2
-    created: "2024-11-04T01:15:16.131361299Z"
+    created: "2024-11-04T01:37:47.23614479Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: 7d3f034f881c7775c575aa2b72224c581bf75ae50a5d72971b28ae82c8a4d280
@@ -87,7 +99,7 @@ entries:
     version: 2.2.1-rc.2
   - apiVersion: v2
     appVersion: 2.2.0
-    created: "2024-11-04T01:15:16.131180672Z"
+    created: "2024-11-04T01:37:47.235674264Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: 43bcfa2057db5d063dd6c1a22ce5e6d397dc31c03c8402a51cb436a4ad753b15
@@ -99,7 +111,7 @@ entries:
     version: 2.2.0
   - apiVersion: v2
     appVersion: 2.2.0-rc.8
-    created: "2024-11-04T01:15:16.130964768Z"
+    created: "2024-11-04T01:37:47.23551604Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: 134f21968e037a46f4d055da120b6ce2a661acfcaa62e4aa92d0c0f919d0a40c
@@ -111,7 +123,7 @@ entries:
     version: 2.2.0-rc.8
   - apiVersion: v2
     appVersion: 2.2.0-rc.7
-    created: "2024-11-04T01:15:16.130802254Z"
+    created: "2024-11-04T01:37:47.235354439Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: eb1457d65dff36fe610bbbc8ccf00ba8c8ad4b49eff49edc8e3e4c71c8d50ecf
@@ -123,7 +135,7 @@ entries:
     version: 2.2.0-rc.7
   - apiVersion: v2
     appVersion: 2.2.0-rc.6
-    created: "2024-11-04T01:15:16.130628199Z"
+    created: "2024-11-04T01:37:47.235179223Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: b6bb75faca94e92144f80ebb456fcb050ad07e13eb6c4e0477b4e079d6612265
@@ -135,7 +147,7 @@ entries:
     version: 2.2.0-rc.6
   - apiVersion: v2
     appVersion: 2.2.0-rc.1
-    created: "2024-11-04T01:15:16.130447912Z"
+    created: "2024-11-04T01:37:47.235001352Z"
     description: Deploy custom resource definitions for Minio Operator Ext
     digest: ca47f612708ef5e91b34f0f9c93a00f7b3e5d3ea91c83421f5f091d39111d563
     name: crds
@@ -145,7 +157,7 @@ entries:
     version: 2.2.0-rc.1
   - apiVersion: v2
     appVersion: 2.2.0-alpha.13+post-helm
-    created: "2024-11-04T01:15:16.130087429Z"
+    created: "2024-11-04T01:37:47.234639809Z"
     description: 'Deploys the custom resource definitions used by the minio-operator-ext
       operator '
     digest: 94d910d99b896a10adadbb5cd6d8d122d0f1ac30fbda184ab521bb6476e2cbc6
@@ -157,7 +169,7 @@ entries:
     version: 2.2.0-alpha.13+post-helm
   - apiVersion: v2
     appVersion: 2.1.1-rc.4
-    created: "2024-11-04T01:15:16.12989013Z"
+    created: "2024-11-04T01:37:47.234468149Z"
     description: A Helm chart for Kubernetes
     digest: ef8ff619e988b1930bcd66fe34815ab7b81ab3e514ee4f30210062a451283f1c
     name: crds
@@ -167,7 +179,7 @@ entries:
     version: 2.1.1-rc.4
   - apiVersion: v2
     appVersion: 2.1.1-rc.3
-    created: "2024-11-04T01:15:16.129499479Z"
+    created: "2024-11-04T01:37:47.23410873Z"
     description: A Helm chart for Kubernetes
     digest: aec9e4645f691e2d14ea0a34d2b658a3953c9ccb0bbfdbf692415fb6c9b9fb85
     name: crds
@@ -177,7 +189,7 @@ entries:
     version: 2.1.1-rc.3
   - apiVersion: v2
     appVersion: 2.1.1-rc.2
-    created: "2024-11-04T01:15:16.12912006Z"
+    created: "2024-11-04T01:37:47.233714547Z"
     description: A Helm chart for Kubernetes
     digest: 9c395cc95ea23ab509026db7b1481b5df276628af59ac3ddf033552e3414cd58
     name: crds
@@ -187,8 +199,20 @@ entries:
     version: 2.1.1-rc.2
   operator:
   - apiVersion: v2
+    appVersion: 2.2.3-rc.1
+    created: "2024-11-04T01:37:47.244052459Z"
+    description: 'Deploy minio-operator-ext, an operator that allows for declarative
+      management of MinIO resources '
+    digest: 7b8955baa81cbcfceaade787057b3b47abe0705a96cd45d2cadad573ae68837f
+    home: https://github.com/benfiola/minio-operator-ext
+    name: operator
+    type: application
+    urls:
+    - https://benfiola.github.io/minio-operator-ext/charts/operator-2.2.3-rc.1.tgz
+    version: 2.2.3-rc.1
+  - apiVersion: v2
     appVersion: 2.2.2
-    created: "2024-11-04T01:15:16.13840171Z"
+    created: "2024-11-04T01:37:47.243725992Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: 49d3fec32846e5f1ce1eb96e3f35923afde92c4093c62550ec79e19ea3dcc2f4
@@ -200,7 +224,7 @@ entries:
     version: 2.2.2
   - apiVersion: v2
     appVersion: 2.2.2-rc.1
-    created: "2024-11-04T01:15:16.138089537Z"
+    created: "2024-11-04T01:37:47.2433433Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: 208e122eb2c9220d685d400453b1dff8bf78be1610ece097db9ae52d41b70049
@@ -212,7 +236,7 @@ entries:
     version: 2.2.2-rc.1
   - apiVersion: v2
     appVersion: 2.2.2-alpha.3+generate-more-code
-    created: "2024-11-04T01:15:16.13778091Z"
+    created: "2024-11-04T01:37:47.242584246Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: 764c2a3f2563dc3ba4df6f13a9e214d7bb5948f9e6844813e0b80ceacefdaeab
@@ -224,7 +248,7 @@ entries:
     version: 2.2.2-alpha.3+generate-more-code
   - apiVersion: v2
     appVersion: 2.2.2-alpha.2+generate-more-code
-    created: "2024-11-04T01:15:16.137462094Z"
+    created: "2024-11-04T01:37:47.241963842Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: 2af861886d4485f51bfe3d54865111d3f17207d2cac77c1a5b42faef02ca31a9
@@ -236,7 +260,7 @@ entries:
     version: 2.2.2-alpha.2+generate-more-code
   - apiVersion: v2
     appVersion: 2.2.1-rc.4
-    created: "2024-11-04T01:15:16.137154619Z"
+    created: "2024-11-04T01:37:47.241648525Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: b6fa847ea5b1d4326775b85115008dc45ddc9603b68513f23a1049cdedfc4aea
@@ -248,7 +272,7 @@ entries:
     version: 2.2.1-rc.4
   - apiVersion: v2
     appVersion: 2.2.1-rc.3
-    created: "2024-11-04T01:15:16.136856732Z"
+    created: "2024-11-04T01:37:47.241309974Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: caaba395bc7f3bd1771c277cb60060349c60aeb15e72b5b488c8972f8a6cfab8
@@ -260,7 +284,7 @@ entries:
     version: 2.2.1-rc.3
   - apiVersion: v2
     appVersion: 2.2.1-rc.2
-    created: "2024-11-04T01:15:16.136558274Z"
+    created: "2024-11-04T01:37:47.240995339Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: fcb65f8836281f5319ddacd3abec483aa5504dc0df1afb93dd942484689b0e4c
@@ -272,7 +296,7 @@ entries:
     version: 2.2.1-rc.2
   - apiVersion: v2
     appVersion: 2.2.0
-    created: "2024-11-04T01:15:16.136248986Z"
+    created: "2024-11-04T01:37:47.240696683Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: cffec12313cd99eea4b7f3817c877ee512a553ff3542ef397d1d9c14de702286
@@ -284,7 +308,7 @@ entries:
     version: 2.2.0
   - apiVersion: v2
     appVersion: 2.2.0-rc.8
-    created: "2024-11-04T01:15:16.135947282Z"
+    created: "2024-11-04T01:37:47.240378892Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: 1b40c34bfee174d6c8c77412b68d298eecb5bd0d1d2721a3f4a565e200882af7
@@ -296,7 +320,7 @@ entries:
     version: 2.2.0-rc.8
   - apiVersion: v2
     appVersion: 2.2.0-rc.7
-    created: "2024-11-04T01:15:16.135645448Z"
+    created: "2024-11-04T01:37:47.240064977Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: cd21998524e47a63d95a5a1b52e863d91d6b4853d44fee3c3aec57e7d123d910
@@ -308,7 +332,7 @@ entries:
     version: 2.2.0-rc.7
   - apiVersion: v2
     appVersion: 2.2.0-rc.6
-    created: "2024-11-04T01:15:16.135334327Z"
+    created: "2024-11-04T01:37:47.239757074Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: 59a0562d8d6929f3ee0c8ee00fd6c7bed537f98746f5ed172d657756f0453c98
@@ -320,7 +344,7 @@ entries:
     version: 2.2.0-rc.6
   - apiVersion: v2
     appVersion: 2.2.0-rc.1
-    created: "2024-11-04T01:15:16.134985695Z"
+    created: "2024-11-04T01:37:47.239448309Z"
     description: Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources
     digest: 759a21ff80891af26ee527b27f31d783ddaa333ba5f8fb4f0a816cf66285697f
@@ -331,7 +355,7 @@ entries:
     version: 2.2.0-rc.1
   - apiVersion: v2
     appVersion: 2.2.0-alpha.13+post-helm
-    created: "2024-11-04T01:15:16.134660637Z"
+    created: "2024-11-04T01:37:47.239131279Z"
     description: 'Deploy minio-operator-ext, an operator that allows for declarative
       management of MinIO resources '
     digest: 94a8ed5fd216a22e2e8639024b0fa75df2ea67cf71cd1d36ceab4476a463456c
@@ -343,7 +367,7 @@ entries:
     version: 2.2.0-alpha.13+post-helm
   - apiVersion: v2
     appVersion: 2.1.1-rc.4
-    created: "2024-11-04T01:15:16.13433042Z"
+    created: "2024-11-04T01:37:47.238819589Z"
     description: A Helm chart for Kubernetes
     digest: 1fbf487c84740145b9af2f8e4bce3604f5d5d65003c47d39d1804f4875fc3dd0
     name: operator
@@ -353,7 +377,7 @@ entries:
     version: 2.1.1-rc.4
   - apiVersion: v2
     appVersion: 2.1.1-rc.3
-    created: "2024-11-04T01:15:16.133956321Z"
+    created: "2024-11-04T01:37:47.238471401Z"
     description: A Helm chart for Kubernetes
     digest: cd1ff8aeaaa3e9ed0cd260efc1275870bdaec0da8e5b937c304f424883ea73c0
     name: operator
@@ -363,7 +387,7 @@ entries:
     version: 2.1.1-rc.3
   - apiVersion: v2
     appVersion: 2.1.1-rc.2
-    created: "2024-11-04T01:15:16.13334641Z"
+    created: "2024-11-04T01:37:47.238113886Z"
     description: A Helm chart for Kubernetes
     digest: 760c023a1b6ef81b0de46c4b94e900df58b25e1abf6846387505c6e680f1c158
     name: operator
@@ -371,4 +395,4 @@ entries:
     urls:
     - https://benfiola.github.io/minio-operator-ext/charts/operator-2.1.1-rc.2.tgz
     version: 2.1.1-rc.2
-generated: "2024-11-04T01:15:16.128536119Z"
+generated: "2024-11-04T01:37:47.2331471Z"
